# depthRust

./: .gitignore  README.md  export.py
android-app/: gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/assets/: .gitignore
android-app/app/src/main/java/com/sujal/depth/: DepthSession.kt  MainActivity.kt  Native.kt
android-app/app/src/main/jniLibs/: .gitignore
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
rustdepth/: Cargo.toml
rustdepth/src/: lib.rs
